Added sagemaker params features to allow those to be set from papermill or os.environ. Removed pause from nbdev_test_nbs

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -36,7 +36,7 @@
     "from fastcore.script import Param, call_parse\n",
     "from nbdev.export import find_default_export, get_config, nbglob, read_nb\n",
     "\n",
-    "from sciflow.data_handler import extract_param_meta\n",
+    "from sciflow.data_handler import ParamMeta, extract_param_meta\n",
     "from sciflow.packaging import determine_dependencies\n",
     "from sciflow.params import params_as_dict\n",
     "from sciflow.parse_module import (\n",
@@ -45,7 +45,13 @@
     "    extract_return_var_names,\n",
     "    extract_steps,\n",
     ")\n",
-    "from sciflow.utils import get_flow_path, indent_multiline, lib_path, titleize"
+    "from sciflow.utils import (\n",
+    "    get_flow_path,\n",
+    "    indent_multiline,\n",
+    "    lib_path,\n",
+    "    prepare_env,\n",
+    "    titleize,\n",
+    ")"
    ]
   },
   {
@@ -72,6 +78,15 @@
     "nb = read_nb(nb_path)\n",
     "module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
     "test_module = os.path.join(get_config().path(\"lib_path\"), f\"{module_name}.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prepare_env()"
    ]
   },
   {
@@ -134,6 +149,10 @@
     "    if len(params) == 0:\n",
     "        print(f\"No params cell found for: {os.path.basename(nb_path)}\")\n",
     "    pipeline_class_name = f\"{titleize(extract_module_only(module_name))}Pipeline\"\n",
+    "\n",
+    "    fq_module_name = f\"{lib_name}.{module_name}\"\n",
+    "    param_meta = extract_param_meta(fq_module_name, params)\n",
+    "\n",
     "    try:\n",
     "        steps_param_meta, steps_vars = write_pipeline_to_files(\n",
     "            flow_path,\n",
@@ -142,6 +161,8 @@
     "            module_name,\n",
     "            steps,\n",
     "            params,\n",
+    "            param_meta,\n",
+    "            fq_module_name,\n",
     "            track_experiment,\n",
     "        )\n",
     "    except ValueError as ve:\n",
@@ -158,6 +179,7 @@
     "        module_name,\n",
     "        steps,\n",
     "        params,\n",
+    "        param_meta,\n",
     "        steps_param_meta,\n",
     "        steps_vars,\n",
     "        track_experiment,\n",
@@ -229,6 +251,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def set_sm_params(params, has_processing_step, has_train_step):\n",
+    "    # Precedence (higher given precedence)\n",
+    "    # 1. Environment var\n",
+    "    # 2. Papermill\n",
+    "    sm_params = {}\n",
+    "    if has_processing_step:\n",
+    "        if \"proc_image_uri\" not in params:\n",
+    "            if \"SM_PROC_IMAGE_URI\" not in os.environ:\n",
+    "                raise ValueError(\n",
+    "                    (\n",
+    "                        \"Sagemaker Processing Step(s) are included but no processing image URI has \"\n",
+    "                        \"been set in either notebook parameters (papermill) or \"\n",
+    "                        \"via SM_PROC_IMAGE_URI environment variable. \\nSet one of these to resolve this issue.\"\n",
+    "                    )\n",
+    "                )\n",
+    "            else:\n",
+    "                sm_params[\"proc_image_uri\"] = os.environ[\"SM_PROC_IMAGE_URI\"]\n",
+    "        if \"proc_instance_type\" not in params:\n",
+    "            sm_params[\"proc_instance_type\"] = (\n",
+    "                os.environ[\"SM_PROC_INSTANCE_TYPE\"]\n",
+    "                if \"SM_PROC_INSTANCE_TYPE\" in os.environ\n",
+    "                else \"ml.m5.large\"\n",
+    "            )\n",
+    "    if has_train_step:\n",
+    "        if \"train_image_uri\" not in params:\n",
+    "            if \"SM_TRAIN_IMAGE_URI\" not in os.environ:\n",
+    "                raise ValueError(\n",
+    "                    (\n",
+    "                        \"Sagemaker Trainging Step(s) are included but no training image URI has \"\n",
+    "                        \"been set in either notebook parameters (papermill) or \"\n",
+    "                        \"via SM_TRAIN_IMAGE_URI environment variable. \\nSet one of these to resolve this issue.\"\n",
+    "                    )\n",
+    "                )\n",
+    "            else:\n",
+    "                sm_params[\"train_image_uri\"] = os.environ[\"SM_TRAIN_IMAGE_URI\"]\n",
+    "        if \"train_instance_type\" not in params:\n",
+    "            sm_params[\"train_instance_type\"] = (\n",
+    "                os.environ[\"SM_TRAIN_INSTANCE_TYPE\"]\n",
+    "                if \"SM_PROC_INSTANCE_TYPE\" in os.environ\n",
+    "                else \"ml.m5.large\"\n",
+    "            )\n",
+    "    return sm_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#  export\n",
     "\n",
     "\n",
@@ -239,18 +314,17 @@
     "    module_name: str,\n",
     "    steps: Iterable[FuncDetails],\n",
     "    params: dict,\n",
+    "    param_meta: Iterable[ParamMeta],\n",
+    "    fq_module_name: str,\n",
     "    track_experiment: bool,\n",
     "):\n",
     "    if not os.path.exists(flow_path.parent):\n",
     "        os.mkdir(flow_path.parent)\n",
-    "    fq_module_name = f\"{lib_name}.{module_name}\"\n",
-    "    param_meta = extract_param_meta(fq_module_name, params)\n",
     "\n",
-    "    # TODO - add to profiles or accept as params from papermill\n",
-    "    proc_image_uri = \"368653567616.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-training-custom:conda-env-training\"\n",
-    "    proc_instance_type = \"ml.m5.xlarge\"\n",
-    "    train_image_uri = \"368653567616.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-training-custom:conda-env-training\"\n",
-    "    train_instance_type = \"ml.m5.xlarge\"\n",
+    "    has_train_step = any([is_train_step(s) for s in steps])\n",
+    "    has_processing_step = any([is_processing_step(s) for s in steps])\n",
+    "\n",
+    "    sm_params = set_sm_params(params, has_processing_step, has_train_step)\n",
     "\n",
     "    config = get_config()\n",
     "\n",
@@ -268,9 +342,6 @@
     "        flow_file.write(\"import sagemaker\\n\")\n",
     "        flow_file.write(\"from sagemaker.session import Session\\n\")\n",
     "        flow_file.write(\"from sagemaker.workflow.pipeline import Pipeline\\n\")\n",
-    "\n",
-    "        has_train_step = any([is_train_step(s) for s in steps])\n",
-    "        has_processing_step = any([is_processing_step(s) for s in steps])\n",
     "\n",
     "        if has_train_step and has_processing_step:\n",
     "            flow_file.write(\n",
@@ -290,8 +361,10 @@
     "            flow_file.write(\"from sagemaker.estimator import Estimator\\n\")\n",
     "\n",
     "        has_sm_param = any((p.has_sagemaker_param for p in param_meta.values()))\n",
-    "        if has_sm_param:\n",
-    "            instance_types = [p.instance_type for p in param_meta.values()]\n",
+    "        if has_sm_param or len(sm_params) > 0:\n",
+    "            instance_types = [p.instance_type for p in param_meta.values()] + [\n",
+    "                type(v) for v in sm_params.values()\n",
+    "            ]\n",
     "            sm_params_import = \"from sagemaker.workflow.parameters import \"\n",
     "            if int in instance_types:\n",
     "                sm_params_import += \"ParameterInteger\"\n",
@@ -320,6 +393,11 @@
     "        ind = \"    \"\n",
     "        write_params(flow_file, param_meta, ind)\n",
     "\n",
+    "        if len(sm_params) > 0:\n",
+    "            write_sm_params(flow_file, sm_params, ind)\n",
+    "\n",
+    "        params.update(sm_params)\n",
+    "\n",
     "        flow_file.write(f\"{ind}args = []\\n\")\n",
     "        flow_file.write(\n",
     "            f\"{ind}param_types = {dict(zip(param_meta.keys(), [v.instance_type.__name__ for v in param_meta.values()]))}\\n\"\n",
@@ -337,10 +415,10 @@
     "            steps,\n",
     "            param_meta,\n",
     "            ind,\n",
-    "            proc_image_uri,\n",
-    "            proc_instance_type,\n",
-    "            train_image_uri,\n",
-    "            train_instance_type,\n",
+    "            params.get(\"proc_image_uri\", None),\n",
+    "            params.get(\"proc_instance_type\", None),\n",
+    "            params.get(\"train_image_uri\", None),\n",
+    "            params.get(\"train_instance_type\", None),\n",
     "            track_experiment,\n",
     "        )\n",
     "        flow_file.write(\"\\n\")\n",
@@ -527,6 +605,37 @@
     "            raise ValueError(\n",
     "                f\"Unsupported parameter type for sagemaker pipeline: {param_meta[param].instance_type}\"\n",
     "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  export\n",
+    "\n",
+    "\n",
+    "def write_sm_params(flow_file, sm_params, ind):\n",
+    "    flow_file.write(f\"\\n{ind}# Sagemaker Specific Parameters\\n\")\n",
+    "    for key, val in sm_params.items():\n",
+    "        if type(val) == int:\n",
+    "            flow_file.write(\n",
+    "                f\"{ind}{key} = ParameterInteger(name='{key}', default_value={val})\\n\"\n",
+    "            )\n",
+    "        elif type(val) == float:\n",
+    "            flow_file.write(\n",
+    "                f\"{ind}{key} = ParameterFloat(name='{key}', default_value={val})\\n\"\n",
+    "            )\n",
+    "        elif type(val) == str:\n",
+    "            flow_file.write(\n",
+    "                f\"{ind}{key} = ParameterString(name='{key}', default_value=\\\"{val}\\\")\\n\"\n",
+    "            )\n",
+    "        else:\n",
+    "            raise ValueError(\n",
+    "                f\"Unsupported parameter type for sagemaker pipeline: {type(val)}\"\n",
+    "            )\n",
+    "    flow_file.write(\"\\n\")"
    ]
   },
   {
@@ -915,7 +1024,6 @@
     "                )\n",
     "                flow_file.write(f\"\\n\")\n",
     "                flow_file.write(f\"{ind}{ind}estimator = Estimator(\\n\")\n",
-    "                # TODO extract train_image_uri\n",
     "                flow_file.write(f'{ind}{ind}{ind}image_uri = \"{train_image_uri}\",\\n')\n",
     "                flow_file.write(\n",
     "                    f'{ind}{ind}{ind}entry_point = \"_sciflow_{module_local_name}_{step.name}.py\",\\n'\n",
@@ -1055,6 +1163,7 @@
     "    module_name,\n",
     "    steps,\n",
     "    params,\n",
+    "    param_meta,\n",
     "    steps_param_meta,\n",
     "    steps_vars,\n",
     "    track_experiment,\n",
@@ -1064,8 +1173,6 @@
     "    module_path = Path(lib_path(), lib_name, f\"{module_name.replace('.', '/')}.py\")\n",
     "\n",
     "    # Pass these in instead of replacing..\n",
-    "    fq_module_name = f\"{lib_name}.{module_name}\"\n",
-    "    extract_param_meta(fq_module_name, params)\n",
     "    # TODO needs to be step specific\n",
     "    # pass these in\n",
     "\n",
@@ -1304,8 +1411,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = params_as_dict(nb_path)\n",
-    "param_meta = extract_param_meta(fq_module_name, params)\n",
     "config = get_config()"
    ]
   },
@@ -1315,7 +1420,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_names = list(param_meta.keys())"
+    "# params = params_as_dict(nb_path)\n",
+    "# param_meta = extract_param_meta(fq_module_name, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# param_names = list(param_meta.keys())"
    ]
   },
   {
