Added draft banner ileted lake_observer; Added missing dependencies to settings.ini

--- a/nbs/packaging.ipynb
+++ b/nbs/packaging.ipynb
@@ -591,6 +591,22 @@
    "source": [
     "assert \"conda-local\" == os.environ[\"ARTIFACTORY_CONDA_CHANNEL\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
