--- a/nbs/scilint.ipynb
+++ b/nbs/scilint.ipynb
@@ -603,15 +603,21 @@
     "    ).sort_values([\"tests_per_function\", \"markdown_code_percent\"], ascending=False)\n",
     "\n",
     "    # TODO persist to remote storage\n",
+    "    # needs to be tied to a flow execution rather than a build\n",
+    "    # what is the best way to do this?\n",
     "\n",
     "    print(\"\\n*********************Begin Scilint Report*********************\")\n",
+    "    issues_raised = False\n",
     "    for lt_metric_col, lt_metrics_threshold in zip(\n",
     "        lt_metric_cols, lt_metrics_thresholds\n",
     "    ):\n",
     "        metrics_series = lint_report[lt_metric_col]\n",
+    "        warning_data = metrics_series[metrics_series < lt_metrics_threshold]\n",
+    "        if len(warning_data) > 0:\n",
+    "            issues_raised = True\n",
     "        format_quality_warning(\n",
     "            lt_metric_col,\n",
-    "            metrics_series[metrics_series < lt_metrics_threshold],\n",
+    "            warning_data,\n",
     "            lt_metrics_threshold,\n",
     "            direction=\"<\",\n",
     "        )\n",
@@ -619,12 +625,17 @@
     "        gt_metric_cols, gt_metrics_thresholds\n",
     "    ):\n",
     "        metrics_series = lint_report[gt_metric_col]\n",
+    "        warning_data = metrics_series[metrics_series > gt_metrics_threshold]\n",
+    "        if len(warning_data) > 0:\n",
+    "            issues_raised = True\n",
     "        format_quality_warning(\n",
     "            gt_metric_col,\n",
-    "            metrics_series[metrics_series > gt_metrics_threshold],\n",
+    "            warning_data,\n",
     "            gt_metrics_threshold,\n",
     "            direction=\">\",\n",
     "        )\n",
+    "    if not issues_raised:\n",
+    "        print(\"No issues found\")\n",
     "    print(\"*********************End Scilint Report***********************\")\n",
     "\n",
     "    return lint_report"
