Removed channels from env.yml

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -1081,7 +1081,7 @@
     "                        flow_file.write(\n",
     "                            f'{ind}{ind}{ind}{ind}{ind}s3_data=self.{outputs[training_input]}, content_type=\"text/csv\"\\n'\n",
     "                        )\n",
-    "                    flow_file.write(f\"{ind}{ind}{ind}{ind})\\n\")\n",
+    "                        flow_file.write(f\"{ind}{ind}{ind}{ind}),\\n\")\n",
     "                    flow_file.write(f\"{ind}{ind}{ind}}}\\n\")\n",
     "                flow_file.write(f\"{ind}{ind})\\n\")\n",
     "\n",
@@ -1420,25 +1420,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# params = params_as_dict(nb_path)\n",
-    "# param_meta = extract_param_meta(fq_module_name, params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# param_names = list(param_meta.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "nb_to_sagemaker_pipeline(nb_path, flow_path, silent=False, track_experiment=False)"
    ]
   },
@@ -1474,7 +1455,7 @@
     "            nb_path,\n",
     "            get_flow_path(nb_path, flow_provider=\"sagemaker\"),\n",
     "            silent=False,\n",
-    "            track_experiment=False,\n",
+    "            track_experiment=track_experiment,\n",
     "        )"
    ]
   },
