Removed update of requirements via pigar from default execution

--- a/nbs/packaging.ipynb
+++ b/nbs/packaging.ipynb
@@ -380,12 +380,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sciflow_update_reqs()"
+    "This code does not work as expected the pigar library seems to have limitations in practice for determining all dependencies making this route not viable just yet."
    ]
   },
   {
