[WIP] adding experimenty tracking to sagemaker generation code

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sciflow.to_metaflow import write_track_capture"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,16 +109,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_tracking.py')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "flow_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,33 +570,42 @@
     "        flow_file.write(f\"{ind}{ind}if sys.argv[1] == 'show':\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}{pipeline_class_name}().show()\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}if sys.argv[1] == 'run':\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}flow = {pipeline_class_name}()\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}if len(sys.argv[2:]) > 0:\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}{ind}args = sys.argv[2:]\\n\")\n",
-    "        flow_file.write(\n",
-    "            f\"{ind}{ind}{ind}{ind}flow.args = dict(list(zip(args, args[1:]))[::2])\\n\"\n",
-    "        )\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}flow.run()\\n\")\n",
+    "        \n",
+    "        if track_experiment:\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}flow_tracker = FlowTracker(os.environ['SCIFLOW_BUCKET'], flow_base_key, flow_run_id, steps)\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}flow_tracker.start()\\n\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}try:\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}flow = {pipeline_class_name}()\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}if len(sys.argv[2:]) > 0:\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}args = sys.argv[2:]\\n\")\n",
+    "            flow_file.write(\n",
+    "                f\"{ind}{ind}{ind}{ind}{ind}flow.args = dict(list(zip(args, args[1:]))[::2])\\n\"\n",
+    "            )\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}flow.run()\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}except (KeyboardInterrupt):\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}flow_tracker.interrupted()\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}print(f\\\"Flow interrupted by user: {{flow_run_id}}\\\")\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}except BaseException:\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}exc_type, exc_value, trace = sys.exc_info()\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}except_info = {{\\\"exc_type\\\": exc_type, \\\"exc_value\\\": exc_value, \\\"trace\\\": trace}}\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}flow_tracker.failed(except_info)\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}print(f\\\"Flow failed: {{flow_run_id}}\\\")\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}flow_tracker.completed()\\n\")  \n",
+    "        else:\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}flow = {pipeline_class_name}()\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}if len(sys.argv[2:]) > 0:\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}args = sys.argv[2:]\\n\")\n",
+    "            flow_file.write(\n",
+    "                f\"{ind}{ind}{ind}{ind}flow.args = dict(list(zip(args, args[1:]))[::2])\\n\"\n",
+    "            )\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}flow.run()\\n\")\n",
     "\n",
     "        return steps_param_meta, steps_vars"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def write_track_flow(flow_file, track_experiment):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,29 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def write_track_capture(flow_file):\n",
-    "    flow_file.write(\n",
-    "        f\"\"\"\n",
-    "        for key in results.keys():\n",
-    "            if key in self.__dict__:\n",
-    "                self.__dict__[key] = self.__dict__[key] + results[key]\n",
-    "            else:\n",
-    "                self.__dict__[key] = results[key]\n",
-    "\n",
-    "\"\"\"\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,9 +1303,24 @@
     "                        for a in step_func_args\n",
     "                    ]\n",
     "                )\n",
-    "                sm_module_file.write(f\"{ind}results = {step.name}({step_func_args})\\n\")\n",
+    "                step_func_call_text = f\"{ind}results = {step.name}({step_func_args})\"\n",
     "            else:\n",
-    "                sm_module_file.write(f\"{ind}results = {step.name}()\\n\")\n",
+    "                step_func_call_text = f\"{ind}results = {step.name}()\"\n",
+    "                  \n",
+    "            if track_experiment:\n",
+    "                write_step_tracker(\n",
+    "                        sm_module_file,\n",
+    "                        ind,\n",
+    "                        param_meta,\n",
+    "                        steps,\n",
+    "                        step,\n",
+    "                        step_func_call_text.replace(\"self.tracker\", \"tracker\")\n",
+    "                )\n",
+    "            else:\n",
+    "                sm_module_file.write(\n",
+    "                    f'{ind}{step_func_call_text}\\n'\n",
+    "                )\n",
+    "            \n",
     "            if is_processing_step(step):\n",
     "                sm_module_file.write(\n",
     "                    f'{ind}save_results(\"/opt/ml/processing/output\", results)\\n'\n",
@@ -1329,7 +1351,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def write_step_tracker(sm_module_file, ind, param_meta, steps, step, step_func_call_text):\n",
+    "    sm_module_file.write(f\"{ind}tracker = None\\n\")\n",
+    "    sm_module_file.write(f\"{ind}try:\\n\")\n",
+    "    sm_module_file.write(\n",
+    "        f'{ind}{ind}tracker = StepTracker(self.bucket_name, self.flow_base_key, self.flow_run_id, \"{step.name}\")\\n'\n",
+    "    )\n",
+    "    sm_module_file.write(f\"{ind}{ind}with tempfile.TemporaryDirectory() as temp_dir:\\n\")\n",
+    "    sm_module_file.write(\n",
+    "        f\"{ind}{ind}{ind}with tracker.capture_out() as tracker._output_file:\\n\"\n",
+    "    )\n",
+    "    sm_module_file.write(f\"{ind}{ind}{ind}{ind}tracker.start_heartbeat(10.0)\\n\")\n",
+    "\n",
+    "    if not step.has_return:\n",
+    "        sm_module_file.write(f\"{ind}{ind}{ind}{ind}{step_func_call_text}\\n\")\n",
+    "    else:\n",
+    "        if step.return_stmt in param_meta:\n",
+    "            raise ValueError(\n",
+    "                f\"[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique\"\n",
+    "            )\n",
+    "        sm_module_file.write(f\"{ind}{ind}{ind}{ind}{step_func_call_text}\\n\")\n",
+    "        write_track_capture(sm_module_file, ind, 5)\n",
+    "\n",
+    "    sm_module_file.write(f\"{ind}{ind}{ind}{ind}tracker.completed()\\n\")\n",
+    "    sm_module_file.write(f\"{ind}except BaseException:\\n\")\n",
+    "    sm_module_file.write(f\"{ind}{ind}if tracker:\\n\")\n",
+    "    sm_module_file.write(\n",
+    "        f\"{ind}{ind}{ind}exc_type, exc_value, trace = sys.exc_info()\\n\"\n",
+    "    )\n",
+    "    sm_module_file.write(\n",
+    "        f'{ind}{ind}{ind}except_info = {{\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}}\\n'\n",
+    "    )\n",
+    "    sm_module_file.write(\n",
+    "        f'{ind}{ind}{ind}tracker.completed(status=\"FAILED\", except_info=except_info)\\n'\n",
+    "    )\n",
+    "    sm_module_file.write(f\"{ind}{ind}raise\\n\\n\")\n",
+    "    sm_module_file.write(f\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1407,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,9 +1485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted test_tracking.ipynb to TestTrackingPipeline in: test_tracking.py\n"
+     ]
+    }
+   ],
    "source": [
     "nb_to_sagemaker_pipeline(nb_path, flow_path, silent=False, track_experiment=False)"
    ]
@@ -1432,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,19 +1553,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted test_tracking.ipynb to TestTrackingPipeline in: test_tracking.py\n",
+      "Converted test_multistep.ipynb to TestMultistepPipeline in: test_multistep.py\n",
+      "Converted test_export.ipynb to TestExportPipeline in: test_export.py\n",
+      "No params cell found for: test_module.ipynb\n",
+      "Sagemaker conversion failed for test_module.ipynb, Reason: Step: first depends on variable(s) not in flow scope: \"{'some_param'}\"\n",
+      "No params cell found for: test_multistep_no_params.ipynb\n",
+      "Sagemaker conversion failed for test_multistep_no_params.ipynb, Reason: Step: preprocess depends on variable(s) not in flow scope: \"{'model_level', 'traffic_percent', 'min_date'}\"\n",
+      "Sagemaker conversion failed for test_data_handling.ipynb, Reason: Unsupported parameter type for sagemaker pipeline: <class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "generate_flows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
    "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
